Revert "Another test fix"
This reverts commit ec9bd5c005c35f0314a6ac48cdf09797b6789770.